--- a/site/index.html
+++ b/site/index.html
@@ -15,6 +15,7 @@
         <input class="username" id="username" placeholder="Username">
         <input class="password" id="password" placeholder="Password">
         <input class="submit" type="button" id="login" value="Submit" onclick="login()">
+        <input class="submit" type="button" id="logout" value="Submit" onclick="logout()">
     </div>
     <div>
         <h1 id="loginMessage">
