--- a/site/index.html
+++ b/site/index.html
@@ -31,11 +31,14 @@
     </div>
 
     <div>
-        <input class="" id="title" placeholder="Title">
-        <input class="submit" type="button" id="titleList" value="Submit" onclick="searchTitle()">
+        <input class="" id="searchTitle" placeholder="Title">
+        <input class="submit" type="button" id="titleList" value="Search" onclick="searchTitle()">
         <br>
-        <input class="" id="author" placeholder="Author">
-        <input class="submit" type="button" id="authorList" value="Submit" onclick="searchAuthor()">
+        <input class="" id="searchAuthor" placeholder="Author">
+        <input class="submit" type="button" id="authorList" value="Search" onclick="searchAuthor()">
+
+        <input class="" id="searchISBN" placeholder="ISBN">
+        <input class="submit" type="button" id="ISBNList" value="Search" onclick="searchISBN()">
     </div>
 
     <div>
